--- a/Orion.qsf
+++ b/Orion.qsf
@@ -224,6 +224,7 @@ set_global_assignment -name RESERVE_DATA0_AFTER_CONFIGURATION "USE AS REGULAR IO
 set_global_assignment -name RESERVE_DATA1_AFTER_CONFIGURATION "USE AS REGULAR IO"
 set_global_assignment -name RESERVE_FLASH_NCE_AFTER_CONFIGURATION "USE AS REGULAR IO"
 set_global_assignment -name RESERVE_DCLK_AFTER_CONFIGURATION "USE AS REGULAR IO"
+set_global_assignment -name SEED 2
 set_location_assignment PIN_C12 -to DACD[15]
 set_location_assignment PIN_D12 -to DACD[14]
 set_location_assignment PIN_AE2 -to CTRL_TRSW
@@ -369,4 +370,6 @@ set_location_assignment PIN_Y6 -to DEBUG_LED18
 set_location_assignment PIN_Y4 -to DEBUG_LED19
 
 
+set_instance_assignment -name CURRENT_STRENGTH_NEW "MINIMUM CURRENT" -to CTRL_TRSW
+set_instance_assignment -name CURRENT_STRENGTH_NEW "MINIMUM CURRENT" -to atu_ctrl
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
